Correction mineur dans slides et MAJ docs générés

--- a/presentation_osgeo4w_osgeolive.html
+++ b/presentation_osgeo4w_osgeolive.html
@@ -539,9 +539,7 @@ Les applications qui ont des installateurs mais ne sont pas directement exécuta
 <li><p>Déploiement 32 bits donc utilisable pour l'apprentissage, pas sur un serveur de production</p></li>
 </ul>
 </section></section>
-<section><section id="des-solutions-mais-quels-choix-pour-qui" class="titleslide slide level1"><h1>Des solutions mais quels choix, pour qui?</h1></section><section id="utilisateurs-finaux-pour-lanalyse" class="slide level2">
-<h1>Utilisateurs finaux pour l'analyse</h1>
-</section><section id="géomaticiens-utilisateurs" class="slide level2">
+<section><section id="des-solutions-mais-quels-choix-pour-qui" class="titleslide slide level1"><h1>Des solutions mais quels choix, pour qui?</h1></section><section id="géomaticiens-utilisateurs" class="slide level2">
 <h1>Géomaticiens &quot;utilisateurs&quot;</h1>
 <p>Pour une utilisation bureautique classique:</p>
 <ul>
@@ -560,8 +558,8 @@ Les applications qui ont des installateurs mais ne sont pas directement exécuta
 <ul>
 <li>OSGeo Live</li>
 </ul>
-</section><section id="géomaticiens" class="slide level2">
-<h1>Géomaticiens</h1>
+</section><section id="géomaticiens-allant-vers-le-développement" class="slide level2">
+<h1>Géomaticiens allant vers le développement</h1>
 <ul>
 <li><p>Commencer avec l'OSGEO4W pour se familiariser avec l'usage bureautique</p></li>
 <li><p>Passer à l'OSGeo Live pour se familiariser avec Linux (Xubuntu)</p></li>
@@ -571,7 +569,8 @@ Les applications qui ont des installateurs mais ne sont pas directement exécuta
 </section><section id="administrateurs-système" class="slide level2">
 <h1>Administrateurs système</h1>
 <ul>
-<li>Réutilisation des <a href="https://svn.osgeo.org/osgeo/livedvd/">sources SVN</a>, en particulier pour le déploiement</li>
+<li><p>Réutilisation des <a href="https://svn.osgeo.org/osgeo/livedvd/">sources SVN</a>, en particulier pour le déploiement</p></li>
+<li><p>Réutilisation des paquets de la distribution</p></li>
 </ul>
 </section></section>
 <section><section id="pour-aller-plus-loin" class="titleslide slide level1"><h1>Pour aller plus loin</h1></section><section id="les-sites" class="slide level2">
@@ -1159,7 +1158,7 @@ As you can see listed here, many people have been involved in packaging the Open
 
 
   <script src="reveal.js/lib/js/head.min.js"></script>
-  <script src="reveal.js/js/reveal.min.js"></script>
+  <script src="reveal.js/js/reveal.js"></script>
 
   <script>
 
