MAJ document + renommage accueil en index lors de la génération du document

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="slides">
 
 
-<section><section id="osgeo4w-et-osgeo-live-bien-aborder-lécosystème-géospatial-open-source" class="titleslide slide level1"><h1>OSGeo4W et OSGeo-Live: bien aborder l'écosystème Géospatial Open Source</h1></section></section>
+<section><section id="osgeo4w-et-osgeo-live-bien-aborder-lécosystème-géospatial-open-source-thomas-gratier" class="titleslide slide level1"><h1>OSGeo4W et OSGeo-Live: bien aborder l'écosystème Géospatial Open Source <br/><small style="color:#1166AD;">Thomas Gratier</small></h1></section></section>
 <section><section id="le-constat" class="titleslide slide level1"><h1>Le constat <br/><br/><img width="450" src="images/icon_22637.png" /></h1></section><section id="une-petite-histoire" class="slide level2">
 <h1>Une petite histoire</h1>
 <p>A l'époque des débuts de PostGIS, il n'existait pas d'installateur pour pouvoir le déployer sous Windows. Le seul moyen c'était de compiler avec MinGW.</p>
@@ -539,13 +539,13 @@ Les applications qui ont des installateurs mais ne sont pas directement exécuta
 <li><p>Déploiement 32 bits donc utilisable pour l'apprentissage, pas sur un serveur de production</p></li>
 </ul>
 </section></section>
-<section><section id="des-solutions-mais-quels-choix-pour-qui" class="titleslide slide level1"><h1>Des solutions mais quels choix, pour qui?</h1></section><section id="géomaticiens-utilisateurs" class="slide level2">
-<h1>Géomaticiens &quot;utilisateurs&quot;</h1>
+<section><section id="des-solutions-mais-quels-choix-pour-qui" class="titleslide slide level1"><h1>Des solutions mais quels choix, pour qui?</h1></section><section id="utilisateurs-finaux-pour-lanalyse-dont-géomaticiens" class="slide level2">
+<h1>Utilisateurs finaux pour l'analyse (dont géomaticiens)</h1>
 <p>Pour une utilisation bureautique classique:</p>
 <ul>
 <li>OSGEO4W</li>
 </ul>
-<p>Pour une utilisation spécifique avec de nombreuses briques:</p>
+<p>Pour une utilisation bureautique spécifique avec de nombreuses briques:</p>
 <ul>
 <li>OSGeo Live</li>
 </ul>
@@ -1158,7 +1158,7 @@ As you can see listed here, many people have been involved in packaging the Open
 
 
   <script src="reveal.js/lib/js/head.min.js"></script>
-  <script src="reveal.js/js/reveal.js"></script>
+  <script src="reveal.js/js/reveal.min.js"></script>
 
   <script>
 
